--- a/src/style/main/members.scss
+++ b/src/style/main/members.scss
@@ -31,6 +31,30 @@
   }
 }
 
+.users-nav {
+  .sidebar-database {
+    position: relative;
+    display: inline;
+
+    .fa-sync {
+      position: absolute;
+      top: 50%;
+      left: 33%;
+      font-size: 12px;
+      background-color: $secondary-10;
+      padding: 1px;
+      border-radius: 3px;
+    }
+  }
+
+  &.active.bg-light,
+  &:hover {
+    .fa-sync {
+      background-color: $secondary-100;
+    }
+  }
+}
+
 .member-modal {
   // Allow backdrop over 1st Modal
   z-index: 1040;
